--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@ function closeForm() {
         <div class="mySlides fade"> <!-- Opens div class mySlides fade -->
           <div class="numbertext">1 / 3</div> <!--  Opens and Closes div class numbertext -->
           <img src="images/tempTopBar.jpg" style="width:100%">
-          <div class="text">Caption Text</div> <!--  Opens and Closes div class text -->
+          <div class="text">Castle Green, Broughty Ferry, Barnhill</div> <!--  Opens and Closes div class text -->
         </div> <!--  Closes div class mySlides fade -->
 
         <div class="mySlides fade"> <!-- Opens div class mySlides fade -->
           <div class="numbertext">2 / 3</div> <!--  Opens and Closes div class numbertext -->
           <img src="images/bpslogo.png" style="width:100%">
-          <div class="images/text">Caption Two</div> <!--  Opens and Closes div class text -->
+          <div class="images/text">Barnhill Primary School</div> <!--  Opens and Closes div class text -->
         </div> <!--  Closes div class mySlides fade -->
 
         <div class="mySlides fade"> <!-- Opens div class mySlides fade -->
           <div class="numbertext">3 / 3</div> <!--  Opens and Closes div class numbertext -->
           <img src="images/headertest.jpeg" style="width:100%">
-          <div class="text">Caption Three</div> <!--  Opens and Closes div class text -->
+          <div class="text">Barnhill Primary Class Photo</div> <!--  Opens and Closes div class text -->
         </div> <!--  Closes div class mySlides fade -->
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
