--- a/faq.html
+++ b/faq.html
@@ -87,17 +87,17 @@
         <h1 id="pageTitle"> Frequently Asked Questions</h1>
 
         <div class="QnA">
-            <h2 class="question" class="dropdownTitle" onclick="hideItem('a1', 'FAQ1')"> When does the school open and close?<p id="FAQ1" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle"  onclick="hideItem('a1', 'FAQ1')"> When does the school open and close?<p id="FAQ1" style="display:inline;">&#9660;</p></h2>
             <p class="answer" id="a1">A: The school is open from 09:00 to 15:15, Monday to Friday.</p>
         </div>
 
         <div class="QnA">
-            <h2 class="question" class="dropdownTitle" onclick="hideItem('a2', 'FAQ2')"> When are the pupil's break and lunch times?<p id="FAQ2" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle"  onclick="hideItem('a2', 'FAQ2')"> When are the pupil's break and lunch times?<p id="FAQ2" style="display:inline;">&#9660;</p></h2>
             <p class="answer" id="a2">A: Break is from 11:10 to 11:30<br>Lunch is from 13:15 to 14:00</p>
         </div>
 
         <div class="QnA">
-            <h2 class="question" class="QnA" class="dropdownTitle" onclick="hideItem('a3', 'FAQ3')">School Dinners<p id="FAQ3" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle QnA"  onclick="hideItem('a3', 'FAQ3')">School Dinners<p id="FAQ3" style="display:inline;">&#9660;</p></h2>
             <p class="answer" id="a3">
                 A: School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to
                 Parent Pay if you
@@ -108,7 +108,7 @@
         </div>
 
         <div class="QnA">
-            <h2 class="question" class="QnA" class="dropdownTitle" onclick="hideItem('a4', 'FAQ4')">Strikes or Snow days<p id="FAQ4" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle QnA" c onclick="hideItem('a4', 'FAQ4')">Strikes or Snow days<p id="FAQ4" style="display:inline;">&#9660;</p></h2>
             <p class="answer" id="a4">
                 A: In the case of the school being shut due to dangerous weather conditions or strikes, parents
                 will recieve a
