--- a/staff.html
+++ b/staff.html
@@ -17,7 +17,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="../images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -82,68 +82,75 @@
 
 
         <div class="gridContainer">
-
-            <h2 class="gridHead"> Leadership: </h2>
-            <h2 class="gridHead"> School: </h2>
-            <h2 class="gridHead"> Nursery: </h2>
-            <table class="gridTable">
-                <tr>
-                    <th> Role </th>
-                    <th> Teacher(s) </th>
-                </tr>
-                <tr>
-                    <td> Head Teacher </td>
-                    <td> Mrs Angela Bruce </td>
-                </tr>
-                <tr>
-                    <td> Depute Head </td>
-                    <td> Mr Philip Smith </td>
-                </tr>
-                <tr>
-                    <td> Acting Principal Teacher </td>
-                    <td> Mrs Lindsay Alexander </td>
-                </tr>
-            </table>
-
-            <table class="gridTable">
-                <tr>
-                    <th> Class </th>
-                    <th> Teacher(s) </th>
-                </tr>
-                <tr>
-                    <td> P1a <br> P1b <br> P1c</td>
-                    <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td>
-                </tr>
-                <tr>
-                    <td> P2a <br> P2b</td>
-                    <td> Mrs Hutchison <br> Miss Kemp</td>
-                </tr>
-                <tr>
-                    <td> P3a <br> P3b</td>
-                    <td> Mrs McVeigh and Mrs Alexander <br> Mr Jones</td>
-                </tr>
-                <tr>
-                    <td> P4a <br> P4b</td>
-                    <td> Miss Watt and Miss Airlie <br> Mrs Fenton and Mrs J Alexander</td>
-                </tr>
-                <tr>
-                    <td> P5a <br> P5b</td>
-                    <td> Mrs Stewart <br> Mrs Watt </td>
-                </tr>
-                <tr>
-                    <td> P6a <br> P6b</td>
-                    <td> Miss Stewart <br> Miss Morrison</td>
-                </tr>
-                <tr>
-                    <td> P6/7 </td>
-                    <td> Miss Alexander </td>
-                </tr>
-                <tr>
-                    <td> P7a <br> P7b </td>
-                    <td> Miss Robertson <br> Mrs Goldsmith</td>
-                </tr>
-            </table>
-
+            <div class="row">
+                <div class="column">
+                    <h2 class="gridHead"> Leadership: </h2>
+                    <h2 class="gridHead"> School: </h2>
+                    <h2 class="gridHead"> Nursery: </h2>
+                    <table class="gridTable">
+                        <tr>
+                            <th> Role </th>
+                            <th> Teacher(s) </th>
+                        </tr>
+                        <tr>
+                            <td> Head Teacher </td>
+                            <td> Mrs Angela Bruce </td>
+                        </tr>
+                        <tr>
+                            <td> Depute Head </td>
+                            <td> Mr Philip Smith </td>
+                        </tr>
+                        <tr>
+                            <td> Acting Principal Teacher </td>
+                            <td> Mrs Lindsay Alexander </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="column">
+                    <table class="gridTable">
+                        <tr>
+                            <th> Class </th>
+                            <th> Teacher(s) </th>
+                        </tr>
+                        <tr>
+                            <td> P1a <br> P1b <br> P1c</td>
+                            <td> Miss Swan <br> Mrs Bain and Mrs Mackenzie <br> Mrs Fairbairn</td>
+                        </tr>
+                        <tr>
+                            <td> P2a <br> P2b</td>
+                            <td> Mrs Hutchison <br> Miss Kemp</td>
+                        </tr>
+                        <tr>
+                            <td> P3a <br> P3b</td>
+                            <td> Mrs McVeigh and Mrs Alexander <br> Mr Jones</td>
+                        </tr>
+                        <tr>
+                            <td> P4a <br> P4b</td>
+                            <td> Miss Watt and Miss Airlie <br> Mrs Fenton and Mrs J Alexander</td>
+                        </tr>
+                        <tr>
+                            <td> P5a <br> P5b</td>
+                            <td> Mrs Stewart <br> Mrs Watt </td>
+                        </tr>
+                        <tr>
+                            <td> P6a <br> P6b</td>
+                            <td> Miss Stewart <br> Miss Morrison</td>
+                        </tr>
+                        <tr>
+                            <td> P6/7 </td>
+                            <td> Miss Alexander </td>
+                        </tr>
+                        <tr>
+                            <td> P7a <br> P7b </td>
+                            <td> Miss Robertson <br> Mrs Goldsmith</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
             <table class="gridTable">
                 <tr>
                     <th> Role </th>
