--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <ul>
 
-                <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="../images/bpslogo.png"></a>
+                <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
 
                 <li><a href="index.html">Home</a></li>
 
@@ -126,21 +126,21 @@
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">1 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="../images/tempTopBar.jpg" style="width:100%">
+                <img src="images/tempTopBar.jpg" style="width:100%">
                 <div class="text">Castle Green, Broughty Ferry, Barnhill</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">2 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="../images/bpslogo.png" style="width:100%">
+                <img src="images/bpslogo.png" style="width:100%">
                 <div class="images/text">Barnhill Primary School</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">3 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="../images/headertest.jpeg" style="width:100%">
+                <img src="images/headertest.jpeg" style="width:100%">
                 <div class="text">Barnhill Primary Class Photo</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
@@ -204,7 +204,7 @@
             <div id="BDiv" style="background-color: red; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,);">
                 <!-- Opens div id BDiv -->
-                <img src="../images/B.png" class="letter" id="B" onclick="wordShow('believe', 'BDiv')">
+                <img src="images/B.png" class="letter" id="B" onclick="wordShow('believe', 'BDiv')">
 
                 <p id="believe" style="display: none; font-size: 50px;"> elieve </p> <!-- Closes div id BDiv -->
 
@@ -213,28 +213,28 @@
             <div id="RDiv" style="background-color: orange; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id RDiv -->
-                <img src="../images/R.png" class="letter" id="R" onclick="wordShow('respect', 'RDiv')">
+                <img src="images/R.png" class="letter" id="R" onclick="wordShow('respect', 'RDiv')">
                 <p id="respect" style="display: none; font-size: 50px;"> espect </p> <!-- Closes div id RDiv -->
             </div>
 
             <div id="IDiv" style="background-color: yellow; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id IDiv -->
-                <img src="../images/I.png" class="letter" id="I" onclick="wordShow('include', 'IDiv')">
+                <img src="images/I.png" class="letter" id="I" onclick="wordShow('include', 'IDiv')">
                 <p id="include" style="display: none; font-size: 50px;"> nclude </p> <!-- Closes div id IDiv -->
             </div>
 
             <div id="LDiv" style="background-color: rgb(43, 191, 43); width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id LDiv -->
-                <img src="../images/L.png" class="letter" id="L" onclick="wordShow('learn', 'LDiv')">
+                <img src="images/L.png" class="letter" id="L" onclick="wordShow('learn', 'LDiv')">
                 <p id="learn" style="display: none; font-size: 50px;"> earn and achieve</p> <!-- Closes div id LDiv -->
             </div>
 
             <div id="L2Div" style="background-color: rgb(34, 130, 255); width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.10.1,0.2,0.1);">
                 <!-- Opens div id L2Div -->
-                <img src="../images/L.png" class="letter" id="L2" onclick="wordShow('look', 'L2Div')">
+                <img src="images/L.png" class="letter" id="L2" onclick="wordShow('look', 'L2Div')">
                 <p id="look" style="display: none; font-size: 50px;"> ook after each other</p> <!-- Closes div id L2Div -->
             </div>
 
@@ -244,7 +244,7 @@
 
         <div id="HTmsg">
             <div id="HTmain">
-                <img src="../images/woman.png" alt="Picture of head teacher" id="HTimg">
+                <img src="images/woman.png" alt="Picture of head teacher" id="HTimg">
                 <div id="HTtext">
                     <p> HEADTEACHER MESSAGE GOES HERE</p>
                 </div> <!-- Closes div id HTmsg -->
