--- a/homeLearning.html
+++ b/homeLearning.html
@@ -429,7 +429,18 @@
 
         </footer>
     </div>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelector('.hamburger-button').addEventListener('click', function () {
+                var navLinks = document.querySelector('.nav-links');
+                if (navLinks.style.display === 'none' || navLinks.style.display === '') {
+                    navLinks.style.display = 'block';
+                } else {
+                    navLinks.style.display = 'none';
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
