--- a/staff.html
+++ b/staff.html
@@ -77,9 +77,27 @@
             </div>
         </header>
 
+        <!-- ------------------- Index Header ------------------- -->
+
+
+        <div class="hero-banner-container">
+            <!-- Opens div ID hero-banner-container -->
+
+            <div id="hero-banner-column">
+                <!-- Opens div ID hero-banner-column -->
+
+            </div> <!-- Closes div ID hero-banner-column -->
+
+            <div class="bottom-divide-of-sch-img">
+                <!-- Opens div ID bottom-divide-of-sch-img -->
+
+            </div> <!-- Closes div ID bottom-divide-of-sch-img -->
+
+        </div> <!-- Closes div ID hero-banner-container -->
+
 
         <h1 id="pageTitle"> Staff</h1>
-
+      
 
         <div class="gridContainer">
             <div class="row">
@@ -218,7 +236,18 @@
 
         </footer>
     </div>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelector('.hamburger-button').addEventListener('click', function () {
+                var navLinks = document.querySelector('.nav-links');
+                if (navLinks.style.display === 'none' || navLinks.style.display === '') {
+                    navLinks.style.display = 'block';
+                } else {
+                    navLinks.style.display = 'none';
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
