--- a/uniform.html
+++ b/uniform.html
@@ -14,60 +14,78 @@
         <!-- Opens div class mainBody -->
         <!-- ------------------- Navigation ------------------- -->
 
-        <nav>
+        <header>
+            <nav>
 
-            <ul>
+                <ul>
 
-                <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
 
-                <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
 
-                <li class="dropdown">
-                    <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
-                    <div id="dropdown-content">
-                        <!-- Opens div class dropdown-content-->
-                        <a href="faq.html">FAQ</a>
-                        <a href="dates.html">Dates</a>
-                        <a href="staff.html">Staff</a>
-                        <a href="uniform.html">Uniform</a>
-                    </div> <!-- Closes div class dropdown-content -->
-                </li>
+                    <li class="dropdown">
+                        <span class="aboutBtn" onclick="abtDrpDwn()">About </span>
+                        <div id="dropdown-content">
+                            <!-- Opens div class dropdown-content-->
+                            <a href="faq.html">FAQ</a>
+                            <a href="dates.html">Dates</a>
+                            <a href="staff.html">Staff</a>
+                            <a href="uniform.html">Uniform</a>
+                        </div> <!-- Closes div class dropdown-content -->
+                    </li>
 
-                <li><a href="news.html">News</a></li>
-                <li><a href="homeLearning.html">Home Learning</a></li>
-                <li><a href="contact.html">Contact</a></li>
-
-                <button class="open-button" onclick="openForm()">Login</button>
-
-
-
-            </ul>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="homeLearning.html">Home Learning</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <button class="open-button" onclick="openForm()">Login</button>
 
 
 
-            <div class="form-popup" id="myForm">
-                <form action="/action_page.php" class="form-container">
+                </ul>
+
+                <div class="openbtn"><div class="openbtn-area"><span></span><span></span><span></span></div></div>
+
+                <div class="form-popup" id="myForm">
+                    <form action="/action_page.php" class="form-container">
 
 
-                    <label for="login" style="padding: 15px;"><b>Login</b></label>
-                    <input type="text" placeholder="Enter Login" name="login" required>
+                        <label for="login" style="padding: 15px;"><b>Login</b></label>
+                        <input type="text" placeholder="Enter Login" name="login" required>
 
-                    <label for="psw" style="padding: 15px;"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" required>
+                        <label for="psw" style="padding: 15px;"><b>Password</b></label>
+                        <input type="password" placeholder="Enter Password" name="psw" required>
 
-                    <button type="submit" class="btn">Login</button>
-                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-                </form>
+                        <button type="submit" class="btn">Login</button>
+                        <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                    </form>
+                </div>
+
+
+            </nav>
+            <div id="hamburger-menu">
+                <button class="hamburger-button"> ☰ </button>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="faq.html">FAQ</a>
+                    <a href="dates.html">Dates</a>
+                    <a href="staff.html">Staff</a>
+                    <a href="uniform.html">Uniform</a>
+                    <a href="news.html">News</a>
+                    <a href="homeLearning.html">Home Learning</a>
+                    <a href="contact.html">Contact</a>
+
+
+                </div>
             </div>
+        </header>
+
+        <!-- ------------------- Index Header ------------------- -->
 
 
-        </nav>
-
-
-        <div class="sub-banner-container">
+        <div class="hero-banner-container">
             <!-- Opens div ID hero-banner-container -->
 
-            <div id="sub-banner-column">
+            <div id="hero-banner-column">
                 <!-- Opens div ID hero-banner-column -->
 
             </div> <!-- Closes div ID hero-banner-column -->
@@ -78,8 +96,6 @@
             </div> <!-- Closes div ID bottom-divide-of-sch-img -->
 
         </div> <!-- Closes div ID hero-banner-container -->
-        </Header>
-
         <!-- ------------------- Main Body ------------------- -->
 
 
@@ -278,7 +294,18 @@
     </div>
 
 
-
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelector('.hamburger-button').addEventListener('click', function () {
+                var navLinks = document.querySelector('.nav-links');
+                if (navLinks.style.display === 'none' || navLinks.style.display === '') {
+                    navLinks.style.display = 'block';
+                } else {
+                    navLinks.style.display = 'none';
+                }
+            });
+        });
+    </script>
 
 </body>
 
