--- a/contact.html
+++ b/contact.html
@@ -139,12 +139,19 @@
 
 
 
-
         <div id="settingsPopup">
-            <h1 onclick="enlargeText()"> Big </h1>
-            <h1 onclick="shrinkText()"> Small </h1>
-            <h1 onclick="changeFont()"> Font </h1>
-        </div>
+
+            <h1 style="display:block;"> Text Size: </h1>
+            <h2 onclick="shrinkText()"> - </h2>
+            <h2 onclick="enlargeText()"> + </h2>
+      
+            <h1 style="display:block;"> Fonts: </h2>
+            <h2 onclick="changeFont('Georgia')"> Georgia </h2>
+            <h2 onclick="changeFont('Courier New')"> Courier New </h2>
+            <h2 onclick="changeFont('Arial')"> Arial </h2>
+            <h2 onclick="changeFont('Verdana')"> Verdana </h2>
+      
+          </div>
 
 
 
@@ -178,10 +185,8 @@
             </a>
 
 
-            <p id="cu">
-                Contact Us
-                <br> <span id="button" onclick="showSettings()">Settings</span>
-            </p>
+            <p id="cu"> <a href="contact.html"> Contact Us </a>
+                <br> <span id="button" onclick="showSettings()">Settings</span></p>
 
             <p id="cr">&#169; Barnhill Primary School 2023</p>
 
