--- a/news.html
+++ b/news.html
@@ -125,6 +125,20 @@
             </p>
         </div>
 
+        <div id="settingsPopup">
+
+            <h1 style="display:block;"> Text Size: </h1>
+            <h2 onclick="shrinkText()"> - </h2>
+            <h2 onclick="enlargeText()"> + </h2>
+      
+            <h1 style="display:block;"> Fonts: </h2>
+            <h2 onclick="changeFont('Georgia')"> Georgia </h2>
+            <h2 onclick="changeFont('Courier New')"> Courier New </h2>
+            <h2 onclick="changeFont('Arial')"> Arial </h2>
+            <h2 onclick="changeFont('Verdana')"> Verdana </h2>
+      
+          </div>
+
     </div> <!-- Closes div class mainBody -->
     <!-- ------------------- Footer ------------------- -->
 
@@ -154,10 +168,8 @@
             </a>
 
 
-            <p id="cu">
-                Contact Us
-                <br><span id="button">Settings</span>
-            </p>
+            <p id="cu"> <a href="contact.html"> Contact Us </a>
+                <br> <span id="button" onclick="showSettings()">Settings</span></p>
 
             <p id="cr">&#169; Barnhill Primary School 2023</p>
 
